--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
-  <body style="background-color: #f7f7f7;">
+  <body>
     <!-- <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript> -->
@@ -17,3 +17,9 @@
     <!-- built files will be auto injected -->
   </body>
 </html>
+
+<style>
+body{
+  background-color: #f7f7f7;
+}
+</style>
