song: css overally

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -15,10 +15,12 @@
     </noscript>
     <div id="app"></div>
   </body>
+  <!-- <footer style="position: absolute; bottom: 0;">tttt</footer> -->
 </html>
 
 <style>
 body{
   background-color: #f7f7f7;
 }
+
 </style>
