--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -13,7 +13,12 @@
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
-    <div id="app"></div>
+    <!-- <div v-if="login" class="sticky-top">
+
+    </div> -->
+    <div id="app">
+
+    </div>
   </body>
   <!-- <footer style="position: absolute; bottom: 0;">tttt</footer> -->
 </html>
